--- a/style.css
+++ b/style.css
@@ -15,6 +15,6 @@
     max-height: 100%;
 }
 
-#player, #layer1, #layer2, #layer3, #layer4, #layer5, #enemy_fly, #enemy_spider_big, #enemy_plant {
+#player, #layer1, #layer2, #layer3, #layer4, #layer5, #enemy_fly, #enemy_spider_big, #enemy_plant, #fire, #collisionAnimation, #lives {
     display: none;
 }
